--- a/requirements.txt
+++ b/requirements.txt
@@ -2,9 +2,11 @@ numpy
 pandas
 scikit-learn
 joblib
-#matplotlib
-streamlit
 fastapi
 uvicorn
 pydantic
 requests
+
+streamlit==1.36.0
+altair==5.3.0
+
